Subiendo nuevo modelo de vistas css js y jsp

--- a/src/main/webapp/assets/vistas/ActivarTarjeta.html
+++ b/src/main/webapp/assets/vistas/ActivarTarjeta.html
@@ -23,11 +23,13 @@
             <div class="h-100">
                 <div class="sidebar-logo">
                     <a href="#">
-                        <img class="imagen" src="../image/interfaz-de-usuario-de-administrador.png" alt="">
+                        <img class="imagen" src="image/interfaz-de-usuario-de-administrador.png" alt="">
                     </a>
                 </div>
                 <ul class="sidebar-nav">
-                    
+                    <li class="sidebar-header">
+                        Saldo: S/41.00
+                    </li>
                     <li class="sidebar-item">
                         <a href="#" class="sidebar-link">
                             RUTAS Y HORARIOS
